tests/lean/alias3.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
alias3.lean:2:0: error: alias 'A' was already defined
